# django-project-template

./: Dockerfile  manage.py  pyproject.toml
config/settings/: .env.sample  base.py  local.py  production.py  staging.py
