[tool.poetry]
name = "django-project-template"
version = "0.1.0"
description = ""
authors = ["kent8192 <51869472+kent8192@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "5.1.1"
djangorestframework = "3.15.2"
django-simple-history = "3.7.0"
dj-database-url = "2.2.0"
pyjwt = "2.9.0"
django-cors-headers = "4.4.0"
djangorestframework-simplejwt = "5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
